--- a/HCI/styles/bookreserv.css
+++ b/HCI/styles/bookreserv.css
@@ -231,6 +231,41 @@
     padding: 20px 0 0 0;
 }
 
+.popup-bg{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(83, 83, 83, 0.842);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-box{
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.popup-box img{
+    width: 300px;
+}
+
+.phrase{
+    width: 300px;
+    padding: 20px;
+    text-align: center;
+}
+
+.close{
+    cursor: pointer;
+    margin-top: 10px;
+    padding: 5px 10px;
+}
+
 @media (max-width: 678px) {
     .container{
         flex-direction: column;
