--- a/HCI/styles/bookreserv.css
+++ b/HCI/styles/bookreserv.css
@@ -212,7 +212,7 @@
     border-radius: 5px;
     border: none;
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 10px 30px;
     font-size: 18px;
 }
 
@@ -266,6 +266,38 @@
     padding: 5px 10px;
 }
 
+.star{
+    color: gold;
+    font-size: 45px;
+    cursor: pointer;
+}
+
+.line{
+    width: 100%;
+    height: 3px;
+    border-radius: 10px;
+    background-color: black;
+}
+
+.rating-row{
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    line-height: 0.8;
+}
+
+.name{
+    width: 250px;
+    font-size: 23px;
+}
+
+textarea{
+    width: 100%;
+    padding: 10px;
+    font-size: 20px;
+}
+
 @media (max-width: 678px) {
     .container{
         flex-direction: column;
@@ -297,4 +329,9 @@
     .review{
         text-align: center;
     }
+    .name{
+        max-width: 150px;
+        font-size: 18px;
+    }
+
 }
