--- a/HCI/styles/home.css
+++ b/HCI/styles/home.css
@@ -8,15 +8,21 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #8e31b9;
     color: #8e31b9;
+    overflow-y: auto;
+    -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none;                 
 }
 
 header {
-    background-color: #d4aaf7;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    gap: 50px;
-    padding-bottom: 5px;
+  background-color: #d4aaf7;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  gap: 50px;
+  padding-bottom: 5px;
 }
 
 .logo-toko img{
@@ -107,17 +113,18 @@ header {
 
 .drop-notif{
   background-color: #f6ddff;
-    padding: 20px;
-    margin: 10px;
+  padding: 20px;
+  margin: 10px;
 }
 
 .notif{
-    align-items: center;
-    text-decoration: none;
-    color:#78229f;
-    padding: 3px;
-    margin-top: 8px;
-    margin-bottom: 8px;
+  align-items: center;
+  text-decoration: none;
+  color:#78229f;
+  padding: 3px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  cursor: pointer;
 }
 
 .pembatas{
@@ -127,69 +134,69 @@ header {
 }
 
 .prf-menu-wrap{
-    position: absolute;
-    top: 7%;
-    right: 3%;
-    width: 320px;
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height 0.5s;
-    z-index: 5;
-  }
-  
-  .prf-menu-wrap.open-menu{
-    max-height: 400px;
-  }
-  
-  .prf-menu{
-    background-color: #f6ddff;
-    padding: 20px;
-    margin: 10px;
-    box-shadow: #22539f;
-  }
-  
-  .ingfo{
-    display: flex;
-    align-items: center;
-    position: relative;
-    bottom: 7.5px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .ingfo h2{
-    font-weight: 500;
-    color: #78229f;
-  }
-  
-  .ingfo img{
-    width: 60px;
-    border-radius: 100px;
-    margin-right: 15px;
-  }
-  
-  .prf-menu-link{
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color:#78229f;
-    padding: 3px;
-    margin-top: 5px;
-  }
-  
-  .prf-menu-link img{
-    width: 40px;
-    border-radius: 50%;
-    padding: 8px;
-    margin-right: 15px;
-    background-color: #8e31b9;
-  }
-  
-  .prf-menu-link:hover p{
-    transform: translate(15px);
-    transition: transform 0.5s;
-    font-weight: 600px;
-  }
+  position: absolute;
+  top: 7%;
+  right: 3%;
+  width: 320px;
+  max-height: 0px;
+  overflow: hidden;
+  transition: max-height 0.5s;
+  z-index: 5;
+}
+
+.prf-menu-wrap.open-menu{
+  max-height: 400px;
+}
+
+.prf-menu{
+  background-color: #f6ddff;
+  padding: 20px;
+  margin: 10px;
+  box-shadow: #22539f;
+}
+
+.ingfo{
+  display: flex;
+  align-items: center;
+  position: relative;
+  bottom: 7.5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.ingfo h2{
+  font-weight: 500;
+  color: #78229f;
+}
+
+.ingfo img{
+  width: 60px;
+  border-radius: 100px;
+  margin-right: 15px;
+}
+
+.prf-menu-link{
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color:#78229f;
+  padding: 3px;
+  margin-top: 5px;
+}
+
+.prf-menu-link img{
+  width: 40px;
+  border-radius: 50%;
+  padding: 8px;
+  margin-right: 15px;
+  background-color: #8e31b9;
+}
+
+.prf-menu-link:hover p{
+  transform: translate(15px);
+  transition: transform 0.5s;
+  font-weight: 600px;
+}
 
   /* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER 
   HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER 
@@ -232,7 +239,8 @@ header {
 
 .text{
   margin: 50px;
-  padding-top: 100px;
+  padding-top: 150px;
+  font-size: 25px;
   color: #78229f;
 }
 
@@ -288,6 +296,7 @@ INTRO INTRO INTRO INTRO INTRO INTRO INTRO INTRO INTRO INTRO INTRO INTRO INTRO IN
 .cards{
   background-color: #f6f0ff;
   text-align: center;
+  cursor: pointer;
 }
 
 .cards img{
